fix stretching

--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,5 +1,13 @@
 @media only screen and (min-width: 60em) {
-    main{
+    body, header, footer {
+        max-width: 1440px;
+    }
+
+    main {
         grid-template-columns: 1fr 1fr 1fr;
-    }  
+    }
+
+    #contrast {
+        grid-column: span 1;
+    }
 }
