--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,5 +1,17 @@
 @media only screen and (min-width: 37.5em) {
-  main{
+  body, header, footer {
+      max-width: 959px;
+  }
+  main {
       grid-template-columns: 1fr 1fr;
-  }  
+  }
+
+  footer {
+      margin: 1rem;
+      padding: 15px;
+  }
+
+  #contrast {
+      grid-column: span 2;
+  }
 }
